crates/aven-check/tests/fixtures/check/valid/comptime-drop-key.av
User = { name: Text, email: Text }
user : User = { name: "Ada", email: "ada@x.dev" }
dropKey = (object: {..r}, @key: keysOf(r)) => { ..object, -[key] }
result : { email: Text } = dropKey(user, "name")
