crates/aven-check/tests/fixtures/check/invalid/comptime-param-out-of-domain.av
User = { name: Text, email: Text }
user : User = { name: "Ada", email: "ada@x.dev" }
get = (o: {..r}, @key: keysOf(r)) => o[key]
bad = get(user, "phone")
